fix: search bleeding off container

--- a/src/styles/patrol-page.css
+++ b/src/styles/patrol-page.css
@@ -1,7 +1,7 @@
 .selected-cats-list {
   display: grid;
   gap: 20px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .selected-cats-list .cat {
@@ -11,4 +11,10 @@
   flex-direction: column;
 
   text-align: center;
+}
+
+@media (min-width: 700px) {
+  .selected-cats-list {
+    grid-template-columns: repeat(3, minmax(150px, 1fr));
+  }
 }
